<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_controls" android:checkableBehavior="none">
        <item
            android:id="@+id/action_open_settings_fragment"
            android:title="@string/fragment_label_settings"
            android:icon="@drawable/mt_icon_settings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_open_controls_editor"
            android:title="@string/nav_menu_controls_editor"
            android:icon="@drawable/ic_controls"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_open_gamepad_mapper"
            android:title="@string/nav_menu_gamepad_mapper"
            android:icon="@drawable/mt_icon_controller"
            app:showAsAction="never"/>
    </group>

    <group android:id="@+id/group_files" android:checkableBehavior="none">
        <item
            android:id="@+id/action_install_controls"
            android:title="@string/menu_install_controls"
            android:icon="@drawable/ic_controls"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_install_saves"
            android:title="@string/install_saves_menu"
            android:icon="@drawable/mt_icon_save"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_install_native_libs"
            android:title="@string/native_libs_menu"
            android:icon="@drawable/ic_native_libs"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_install_driver"
            android:title="@string/install_driver_menu"
            android:icon="@drawable/mt_icon_driver"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_export_log"
            android:title="@string/export_log_menu"
            android:icon="@drawable/ic_log_file"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_bug_report"
            android:title="@string/nav_bug_report"
            android:icon="@drawable/ic_bug_report"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_game_settings"
            android:title="@string/game_settings_menu"
            android:icon="@drawable/mt_icon_settings"
            app:showAsAction="never"/>
    </group>

    <group android:id="@+id/group_steam" android:checkableBehavior="none">
        <item
            android:id="@+id/action_download_steam"
            android:title="@string/steam_dl_menu"
            android:icon="@drawable/ic_steam"
            app:showAsAction="never"/>
    </group>

    <group android:id="@+id/group_mods" android:checkableBehavior="none">
        <item
            android:id="@+id/action_open_install_mod"
            android:title="@string/nav_menu_install_mod"
            android:icon="@drawable/ic_mods"
            app:showAsAction="never"/>
    </group>

    <group android:id="@+id/group_android" android:checkableBehavior="none">
        <item
            android:id="@+id/action_open_optimization"
            android:title="@string/nav_menu_optimization"
            android:icon="@drawable/ic_optimization"
            app:showAsAction="never"/>
    </group>

    <!-- Wiki / Donate / Reddit / Version moved to the bottom icon row in activity_launcher.xml -->


</menu>